--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,17 +14,15 @@ source:
 
 build:
   number: 1000
-  script: python setup.py install --single-version-externally-managed --record=record.txt
-  skip: True  # [py2k or py33 or py34]
+  script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
-  build:
-    - python
+  host:
+    - python >=3.5
     - pypandoc
-    - setuptools
-
+    - pip
   run:
-    - python
+    - python >=3.5
     - ipykernel
     - jedi >=0.10
     - metakernel
