--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,6 +13,7 @@ source:
   {{ hashtype }}: {{ hash }}
 
 build:
+  noarch: python
   number: 1000
   script: python -m pip install --no-deps --ignore-installed .
 
